Fix bad text contrast in VersionCompareSelectWidget with dark theme

--- a/packages/changed-elements-react/src/widgets/VersionCompareSelectWidget.scss
+++ b/packages/changed-elements-react/src/widgets/VersionCompareSelectWidget.scss
@@ -103,7 +103,7 @@
     }
 
     > .unprocessed {
-      color: var(--iui-color-background-disabled);
+      color: var(--iui-color-text-muted);
     }
   }
 }
